@@ -13,6 +13,7 @@
 # 171228-1832 - Added more debug logging
 # 180511-1146 - Changed to use server-specific cid_channels_recent table
 # 181003-1728 - Fix for RINGAGENT calls
+# 190102-1509 - More fixes for RINGAGENT Calls
 #
 
 # constants
@@ -743,7 +744,7 @@ sub process_channels
 		$call_id = get_valid_callid($channel_ref->{'CallerIDName'},$channel_ref->{'ConnectedLineName'});
 
 		# only need to match local channels to real channels on VDAD and RINGAGENT calls
-		if ( ( $call_id =~ /^V\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d$|^RINGAGENT/ ) && ( $channel_ref->{'ConnectedLineName'} ne "<unknown>" ))
+		if ( (( $call_id =~ /^V\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d$/ ) && ( $channel_ref->{'ConnectedLineName'} ne "<unknown>" )) || ( $call_id =~ /^RINGAGENT/ ) )
 			{
 			if ( $channel_ref->{'Channel'} =~ /^Local/ ) 
 				{
@@ -1342,7 +1343,8 @@ sub validate_cid_name
 		( $cid_name =~ /DC\d\d\d\d\d\dW\d\d\d\d\d\d\d\d\d\dW/ ) ||	# 3way transfers
 		( $cid_name =~ /M\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d/) ||	# Manual Dials
 		( $cid_name =~ /V\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d/) ||	# Auto Dials
-		( $cid_name =~ /Y\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d/)	# Inbound Calls
+		( $cid_name =~ /Y\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d\d/) ||	# Inbound Calls
+		( $cid_name =~ /^RINGAGENT/ )
 	) 
 		{
 		return 1; # if so return 1 for true
