@@ -331,7 +331,9 @@
   * Allow table names with whitespaces:
     - Update bin/ADMIN_backup.pl,
         bin/ADMIN_backup_ng.pl.
-  
+  * Add upstream Rev. 3058:
+    -Update: bin/AST_update_AMI2.pl: More fixes for RINGAGENT Calls.
+
 2.25.27
   [Jörg Fring-Fürst]
   * Correct typo:
